--- a/HRMS/appsettings.json
+++ b/HRMS/appsettings.json
@@ -9,6 +9,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "appConn": "Data Source=(localdb)\\ProjectModels;Initial Catalog=exigotech;Integrated Security=True;Encrypt=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;MultipleActiveResultSets=True",
-      "providerName": "System.Data.SqlClient"
+    "providerName": "System.Data.SqlClient",
+    "HRMS_PortalContext": "Server=(localdb)\\mssqllocaldb;Database=HRMS_PortalContext-4a17b142-eb38-471f-a3d4-97770a4f390f;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
