--- a/HRMS/nlog.config
+++ b/HRMS/nlog.config
@@ -1,35 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<nlog autoReload="true"
-      xmlns="http://www.nlog-project.org/schemas/NLog.xsd"      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-      internalLogLevel="info" internalLogFile="internalLog.txt">
-
-	<extensions>
-		<add assembly="NLog.Web.AspNetCore" />
-	</extensions>
-
+<nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
+      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      xsi:schemaLocation="http://www.nlog-project.org/schemas/NLog.xsd NLog.xsd"
+      autoReload="true">
 	<targets>
-		<target xsi:type="EventLog"
-					name="eventlog"
-					source="DotNetApp"
-					layout="${message}${onexception:${newline}${exception:format=ToString}}">
-		</target>
-
-		<target xsi:type="File"
-					name="file"
-					layout="${longdate} - ${level:uppercase=true} - ${logger}: ${message}${onexception:${newline}${exception:format=ToString}}"
-			  fileName="${basedir}\logs\DotNetApp.${shortdate}.log"
-			  keepFileOpen="false"
-					encoding="utf-8"
-			  archiveFileName="DotNetApp.${shortdate}.log"
-			  archiveNumbering="Sequence"
-			  archiveEvery="Day"
-			  maxArchiveFiles="1"
-      />
+		<target xsi:type="File" name="fileTarget" fileName="${basedir}/logs/${shortdate}.log" layout="${longdate} ${uppercase:${level}} ${message}" />
+		<target xsi:type="ColoredConsole" name="consoleTarget"  layout="${longdate} ${uppercase:${level}} ${message}" />
 	</targets>
-
 	<rules>
-		<logger name="*" minlevel="Error" writeTo="eventlog" />
-		<logger name="Microsoft.*" maxLevel="Info" final="true" />
-		<logger name="*" minlevel="Info" writeTo="file" />
+		<logger name="*" minlevel="Trace" writeTo="consoleTarget" />
+		<logger name="Microsoft.*" maxlevel="Info" final="true" />
+		<logger name="*" minlevel="Trace" writeTo="fileTarget" />
 	</rules>
 </nlog>
